更新專案：修復所有錯誤、添加 Google Sign-In 功能、更新配置文件和文檔

--- a/TiredApp/Info.plist
+++ b/TiredApp/Info.plist
@@ -45,5 +45,16 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.566724358335-04e0heqf7hato4hv2kb62pkfk9fgd366</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
